--- a/ApiMysql/pom.xml
+++ b/ApiMysql/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>json</artifactId>
             <version>20201115</version>
         </dependency>
+        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
 
     </dependencies>
    
